platform/base/namespace-ulys.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ulys
  annotations:
    linkerd.io/inject: enabled               # auto-mesh every pod here
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit:   restricted
    pod-security.kubernetes.io/warn:    restricted
